added logo and window styling

--- a/www/node_mouse/electron_test/index.html
+++ b/www/node_mouse/electron_test/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World!</title>
+    <title>Fire the laser</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node.js <script>document.write(process.version)</script>
-    and Electron <script>document.write(process.versions['electron'])</script>.
     <script>
     </script>
+    <a href="#" class="button">
+      <span>Hover Me</span>
+    </a>
+    <a href="#" class="button">
+      <span>Hover Me</span>
+    </a>
     <!--<script src="http://localhost:3000/socket.io/socket.io.js"></script>-->
     <script src="http://104.236.77.85/socket.io/socket.io.js"></script>
-    <webview  nodeintegration></webview>
+    <!--<webview  nodeintegration></webview>-->
     <script src="js/index.js"></script>
   </body>
 </html>
