--- a/www/node_mouse/electron_test/index.html
+++ b/www/node_mouse/electron_test/index.html
@@ -7,15 +7,7 @@
   <body>
     <script>
     </script>
-    <!--
-    <a href="#" class="button">
-      <span>Hover Me</span>
-    </a>
-    <a href="#" class="button">
-      <span>Hover Me</span>
-    </a>
-    -->
-    <div id="circle"></div>
+    <div class="circle" id="circle"></div>
     <!--<script src="http://localhost:3000/socket.io/socket.io.js"></script>-->
     <script src="http://104.236.77.85/socket.io/socket.io.js"></script>
     <!--<webview  nodeintegration></webview>-->
